--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -191,7 +191,7 @@ html {
 
   -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
-transition: background-color .5s;
+transition: var(--background-color-base) .5s;
 }
 
 body {
@@ -245,24 +245,33 @@ h1 {
 }
 
 h2 {
-     font-size: inherit;
+     font-size: var(--font-size-large);
+     @media (min-width: 60rem) {
+      font-size: var(--font-size-5xl);
+      }
      line-height: var(--line-height-tight);
+     font-weight: var(--font-weight-semibold);
 }
 
 h3 {
     font-size: 19px;
+    font-size: var(--font-size-large);
+    font-weight: var(--font-weight-semibold);
 }
 
 h4 {
     font-size: 15.5px;
+    font-weight: var(--font-weight-semibold);
 }
 
 h5 {
     font-size: 15px;
+    font-weight: var(--font-weight-semibold);
 }
 
 h6 {
     font-size: 13px;
+    font-weight: var(--font-weight-semibold);
 }
 
 h1, h2 {
@@ -285,7 +294,7 @@ h3, h4, h5, h6 {
 a, p, ul, li, ol, table, span, blockquote {
     color: var(--primary-text-color);
     font-family:   var(--secondary-font-family);
-    font-size: var(--body-copy-size);  
+    font-size: var(--body-copy-size);
     line-height: 1.5em;
 }
 
@@ -705,12 +714,12 @@ hr {
     color: var(--gray-900);
     font-size: var(--body-copy-size);
     border-bottom: 1px solid var(--primary-border-color);
-    background-color: var(--black);
+    background-color: var(--background-color-base);
 }
 
 ::placeholder {
     color: var(--search-placeholder-color);
-    font-size: var(--body-copy-size);
+    font-size: 1rem;
     font-family:  var(--secondary-font-family) !important;
 }
 .search-icon {
@@ -990,7 +999,7 @@ hr {
 
 .tags {
     list-style: none;
-    margin: 0;
+    margin-top: -2rem;
     overflow: hidden;
     padding: 0;
 }
@@ -1016,6 +1025,7 @@ hr {
 
 .content {
   line-height: 20px;
+  margin-top: 5rem;
 }
 
 .content a {
