--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -126,7 +126,7 @@ layout: Stylesheet
   --title-font-size: 2.85rem;
 
   --font-weight-base: 400;
-  --font-weight-semibold: 600;
+  --font-weight-semibold: 500;
   --font-weight-bold: 700;
 
   /* Line height */
@@ -272,7 +272,7 @@ main {
 h1 {
     font-size: var(--title-font-size);
      margin: 0.67em 0;
-     line-height: var(--line-height-tight);
+     line-height: var(--line-height-none);
      letter-spacing: var(--letter-spacing-tight)
 }
 
@@ -684,7 +684,7 @@ hr {
     margin-top: 7px;
     align-self: center;
     justify-self: center;
-    stroke: var(--green);
+    stroke: var(--lime);
 }
 
 .menu-item-text {
@@ -1015,7 +1015,7 @@ hr {
     margin-left: 20px;
     margin-right: 50px;
     font-size: inherit;
-    font-family:  var(--primary-font-family);
+    font-family:  var(--font-family-serif);
     font-weight: var(--font-weight-semibold);
     letter-spacing: var(--letter-spacing-tight);
 }
@@ -1025,7 +1025,7 @@ hr {
     margin-top: -12px;
     margin-left: 20px !important;
     margin-right: 30px;
-    font-family:  var(--secondary-font-family);
+    font-family:  var(--font-family-sans);
     font-size: 15px;
 }
 
@@ -1041,8 +1041,7 @@ hr {
 }
 
 .tag {
-    color: var(--primary-text-color);
-    background: var(--green);
+    color: var(--green);
     text-decoration: none;
     display: inline-block;
     padding: 0 6px;
