--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -750,7 +750,7 @@ hr {
 }
 
 ::placeholder {
-    color: var(--search-placeholder-color);
+    color: var(--lime);
     font-size: 1rem;
     font-family:  var(--secondary-font-family) !important;
 }
