--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -119,8 +119,8 @@ layout: Stylesheet
   --font-size-large: 1.25rem;
   --font-size-xl: 1.75rem;
   --font-size-4xl: 2.5rem;
-  --font-size-5xl: 3.3rem;
-  --font-size-6xl: 4.5rem;
+  --font-size-5xl: 5rem;
+  --font-size-6xl: 5.5rem;
 
   --body-copy-size: 1.35rem;
   --title-font-size: 2.85rem;
@@ -345,7 +345,7 @@ span a,
 div a,
 ol a,
 blockquote a,
-cite a {
+cite a { 
     font-size: inherit;
     font-family: inherit;
     color: inherit;
@@ -531,6 +531,7 @@ hr {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
+   margin-bottom: -1rem;
 }
 
 .site-heading-ltr > .main-page-heading {
@@ -693,7 +694,7 @@ hr {
     font-weight: 400;
     font-size: var(--font-size-small);
     font-family: var(--font-family-mono);
-    color: var(--lime);
+    color: var(--green);
 }
 
 .stale-link {
@@ -745,12 +746,12 @@ hr {
     font-family: var(--secondary-font-family) !important;
     color: var(--gray-900);
     font-size: var(--body-copy-size);
-    border-bottom: 1px solid var(--primary-border-color);
+    border-bottom: 1px solid var(--green);
     background-color: var(--background-color-base);
 }
 
 ::placeholder {
-    color: var(--lime);
+    color: var(--green);
     font-size: 1rem;
     font-family:  var(--secondary-font-family) !important;
 }
@@ -759,7 +760,7 @@ hr {
     vertical-align: middle;
     margin-top: -2px;
     padding-left: 20px;
-    stroke: var(--lime) !important;
+    stroke: var(--green) !important;
     padding-top: 12.5px;
     z-index: 1;
 }
@@ -771,6 +772,7 @@ hr {
     z-index: 1;
     right: 0px !important;
     padding-right: 20px;
+   font-family: var(--font-family-mono);
 }
 
 .search-shortcut kbd:first-child, .search-shortcut kbd:nth-child(2) {
@@ -1062,10 +1064,13 @@ hr {
 .content a {
     color: var(--anchor-text-color);
     text-decoration: none;
+    background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);
+    font-weight: var(--font-weight-semibold);
 }
 
 .content a:hover {
-    text-decoration: underline;
+    text-decoration: none;
+    background-color: var(--lime);
 }
 
 .sn-right,
