--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1033,7 +1033,10 @@ hr {
 
 .tags {
     list-style: none;
-    margin-top: -1rem;
+    margin-top: -1.5rem;
+      @media (min-width: 60rem) {
+         margin-top: -3rem;
+      }
     overflow: hidden;
     padding: 0;
 }
