--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -490,7 +490,7 @@ tbody tr:nth-child(even) {
 
 hr {
     background-color: var(--horizontal-rule-color);
-    color: var(--horizontal-rule-color);
+    color: var(--gray-900);
     border: 0 none;
     height: 1px;
     margin-top: -10px;
@@ -1031,7 +1031,12 @@ hr {
     font-family:  var(--font-family-serif);
     font-weight: var(--font-weight-semibold);
     letter-spacing: var(--letter-spacing-tight);
-    font-size: var(--font-size-xl);
+    font-size: var(--font-size-large);
+    background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);
+}
+
+.feed-title:hover {
+   background-color: var(--lime);
 }
 
 .feed-excerpt{
