--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -791,10 +791,11 @@ hr {
     vertical-align: middle;
     display: inline-block;
     color: var(--secondary-text-color);
-    font-size: 1em;
+    font-size: var(--font-size-small);
     border-radius: 0.2em;
     padding: 0.1em 0.3em;
     box-shadow:0 0px 8px var(--primary-box-shadow-color);
+   font-family: var(--font-family-mono);
 }
 
 .searchbar input[type="text"]:focus {
@@ -1032,11 +1033,10 @@ hr {
     font-weight: var(--font-weight-semibold);
     letter-spacing: var(--letter-spacing-tight);
     font-size: var(--font-size-large);
-    background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);
 }
 
 .feed-title:hover {
-   background-color: var(--lime);
+   text-decoration: underline;
 }
 
 .feed-excerpt{
