--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -1,7 +1,7 @@
 <!-- Parse internal links, external links, transclusions etc and manipuate the content to reflect it accordingly -->
 {%- if page.content-type == "post" -%}
+<p class="tags">{%- include read_time.html -%}</p>
 <ul class="tags">
-    <li>{%- include read_time.html -%}</li>
     {%- if page.status != nil and page.status != empty -%}
     <li><a href="javascript:void(0)" class="tag"><b>Status:</b> <i>{{page.status | capitalize}}</i></a></li>
     {%- endif -%}
