--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -1,6 +1,6 @@
 <!-- Parse internal links, external links, transclusions etc and manipuate the content to reflect it accordingly -->
 {%- if page.content-type == "post" -%}
-<p class="tags">{%- include read_time.html -%}</p>
+<p class="tags">∙ {%- include read_time.html -%}</p>
 <ul class="tags">
     {%- if page.status != nil and page.status != empty -%}
     <li><a href="javascript:void(0)" class="tag"><b>Status:</b> <i>{{page.status | capitalize}}</i></a></li>
@@ -9,9 +9,9 @@
     <!-- Loop through page categories and print them in tags -->
     {%- for tag in page.tags -%}
         {%- if tag == 'Favorite' -%}
-        <li><a href="/favorites/" class="tag">{{ tag }}</a></li>
+        <li><a href="/favorites/" class="tag">#{{ tag }}</a></li>
         {%- else -%}
-        <li><a href="/tags/#{{ tag }}" class="tag">{{ tag }}</a></li>
+        <li><a href="/tags/#{{ tag }}" class="tag">#{{ tag }}</a></li>
         {%- endif -%}
     {%- endfor -%}
 </ul>
