--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1059,7 +1059,8 @@ hr {
 }
 
 .tags li {
-    float: left;
+    /*float: left;*/
+   line-height: var(--line-height-base);
 }
 
 .tag {
@@ -1074,6 +1075,21 @@ hr {
     font-weight: normal !important;
     font-size: var(--font-size-small);
     margin-right: 7px;
+}
+
+.readtime {
+    color: var(--green);
+    text-decoration: none;
+    display: inline-block;
+    padding: 0 6px;
+    border-radius: 0;
+    height: auto;
+    vertical-align: middle;
+    font-family: var(--font-family-mono);
+    font-weight: normal !important;
+    font-size: var(--font-size-small);
+    margin-right: 7px;
+    margin-bottom: 0;
 }
 
 .content {
