--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -1,8 +1,9 @@
 <!-- Parse internal links, external links, transclusions etc and manipuate the content to reflect it accordingly -->
 {%- if page.content-type == "post" -%}
-<p class="readtime">∙ {%- include read_time.html -%}</p>
+
 <ul class="tags">
     {%- if page.status != nil and page.status != empty -%}
+    <li><p class="readtime">{%- include read_time.html -%}</p></li>
     <li><a href="javascript:void(0)" class="tag"><b>Status:</b> <i>{{page.status | capitalize}}</i></a></li>
     {%- endif -%}
     <li><a href="/dates/#{{ page.date | date: '%d-%B-%Y' }}" class="tag">{{ page.date | date: '%B-%d-%Y' }}</a></li>
