--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -289,16 +289,14 @@ h1 {
     /*font-size: var(--title-font-size);*/
      margin: 0.67em 0;
      line-height: var(--line-height-none);
-     letter-spacing: var(--letter-spacing-tight)
+     letter-spacing: var(--letter-spacing-tight);
         
         @media (max-width:699px){
          font-size:17vw;
         }
-   
         @media (min-width:700px) and (max-width:1024px){
          font-size:8rem;
            }
-      
         @media (min-width:1025px) and (max-width:1599px){
                font-size:10rem;
            }
