--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -581,13 +581,481 @@ cite a {
     color: inherit;
 }
 
-ul ul {
-    list-style-type: disc;
+ ul {
+	list-style: none;
+	padding-left: 0
 }
 
-b, strong {
-    font-weight: 600;
+ ul:first-child {
+	margin-top: 0
 }
+
+ ul:last-child {
+	margin-bottom: 0
+}
+
+ ul li {
+	margin-top: 10px;
+	padding-left: 1em;
+	position: relative
+}
+
+ ul li::before {
+	position: absolute;
+	top: .45em;
+	left: 0;
+	height: 6px;
+	width: 6px;
+	background-color: var(--c-accent);
+	border-radius: 50%;
+	content: "";
+	position: absolute
+}
+
+@media(min-width: 1070px) {
+	 ul li::before {
+		height: 8px;
+		width: 8px
+	}
+}
+
+ ul ul li::before {
+	background: transparent;
+	border: 1px solid var(--c-accent)
+}
+
+ ul ul ul li::before {
+	background-color: var(--c-accent)
+}
+
+ ul ul ul ul li::before {
+	background: transparent;
+	border: 1px solid var(--c-accent)
+}
+
+ ul ul ul ul ul li::before {
+	background-color: var(--c-accent)
+}
+
+ ul ul ul ul ul ul li::before {
+	background: transparent;
+	border: 1px solid var(--c-accent)
+}
+
+ ol {
+	counter-reset: counter;
+	list-style: none;
+	padding-left: 0
+}
+
+ ol:first-child {
+	margin-top: 0
+}
+
+ ol:last-child {
+	margin-bottom: 0
+}
+
+ ol>li {
+	margin-top: 10px;
+	padding-left: 1em;
+	position: relative
+}
+
+ ol>li::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	font-family: Theinhardt, system-ui, sans-serif;
+	font-size: 1.4;
+	font-weight: 300;
+	content: counter(counter);
+	counter-increment: counter
+}
+
+ ol li::before {
+	color: var(--c-accent)
+}
+
+ ol ol li::before {
+	content: counter(counter, lower-alpha) "."
+}
+
+ ol ol ol li::before {
+	content: counter(counter, upper-roman) "."
+}
+
+ ol ol ol ol li::before {
+	content: counter(counter) "."
+}
+
+ ol ol ol ol ol li::before {
+	content: counter(counter, lower-alpha) "."
+}
+
+ ol ol ol ol ol ol li::before {
+	content: counter(counter, upper-roman) "."
+}
+
+ blockquote {
+	padding-top: 18px;
+	padding-bottom: 18px
+}
+
+@media(min-width: 600px) {
+	 blockquote {
+		padding-top: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 blockquote {
+		padding-top: 36px
+	}
+}
+
+@media(min-width: 600px) {
+	 blockquote {
+		padding-bottom: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 blockquote {
+		padding-bottom: 36px
+	}
+}
+
+ blockquote p {
+	border-left: 5px solid var(--c-border-light);
+	color: var(--c-text-muted);
+	padding-left: 1em
+}
+
+ blockquote cite {
+	font-family: Theinhardt, system-ui, sans-serif;
+	font-size: 16px;
+	line-height: 1.4;
+	font-weight: 400;
+	color: var(--c-text-muted)
+}
+
+ blockquote cite strong {
+	color: var(--c-text);
+	font-weight: 500
+}
+
+ pre {
+	margin-top: 18px;
+	margin-bottom: 18px;
+	background-color: var(--c-card-bg);
+	color: var(--c-card-text);
+	display: block;
+	padding: 20px
+}
+
+@media(min-width: 600px) {
+	 pre {
+		margin-top: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 pre {
+		margin-top: 36px
+	}
+}
+
+@media(min-width: 600px) {
+	 pre {
+		margin-bottom: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 pre {
+		margin-bottom: 36px
+	}
+}
+
+ code {
+	font-family: Consolas, Menlo, Monaco, "Courier New", Courier, monospace;
+	font-size: 15px;
+	line-height: 1.4;
+	font-weight: 400;
+	background-color: var(--c-card-bg);
+	color: var(--c-card-text);
+	display: inline-block;
+	padding: 2px
+}
+
+ table {
+	margin-top: 18px;
+	margin-bottom: 18px;
+	margin-top: 18px;
+	margin-bottom: 18px;
+	font-family: Theinhardt, system-ui, sans-serif;
+	font-size: 16px;
+	line-height: 1.2;
+	font-weight: 400;
+	background-color: var(--c-card-bg);
+	border-collapse: collapse;
+	color: var(--c-card-text);
+	table-layout: fixed;
+	width: 100%
+}
+
+@media(min-width: 600px) {
+	 table {
+		margin-top: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 table {
+		margin-top: 36px
+	}
+}
+
+@media(min-width: 600px) {
+	 table {
+		margin-bottom: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 table {
+		margin-bottom: 36px
+	}
+}
+
+@media(min-width: 600px) {
+	 table {
+		margin-top: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 table {
+		margin-top: 36px
+	}
+}
+
+@media(min-width: 600px) {
+	 table {
+		margin-bottom: 24px
+	}
+}
+
+@media(min-width: 1070px) {
+	 table {
+		margin-bottom: 36px
+	}
+}
+
+ table strong {
+	font-weight: 500
+}
+
+ table thead {
+	background-color: var(--c-text);
+	color: var(--c-bg);
+	font-weight: 500
+}
+
+@media(max-width: 767px) {
+	 table thead {
+		display: none
+	}
+}
+
+ table thead th {
+	text-align: left
+}
+
+ table tr {
+	margin-top: 0
+}
+
+@media(min-width: 0)and (max-width: 767px) {
+	 table tr {
+		border-width: 0
+	}
+}
+
+ table tr:not(:first-child) {
+	border: 1px solid var(--c-border);
+	border-width: 1px 0 0
+}
+
+ table thead tr {
+	border-width: 0
+}
+
+@media(max-width: 767px) {
+	 table tbody tr {
+		display: block;
+		padding: 24px
+	}
+}
+
+ table thead td,
+ table thead th,
+ table tbody td {
+	margin-top: 0;
+	padding-top: 0
+}
+
+@media(min-width: 768px) {
+	 table thead td,
+	 table thead th,
+	 table tbody td {
+		padding-top: 18px;
+		padding-right: 18px;
+		padding-bottom: 18px;
+		padding-left: 18px
+	}
+}
+
+ table tbody td {
+	line-height: 1.3
+}
+
+@media(max-width: 767px) {
+	 table tbody td {
+		display: block;
+		padding: 0
+	}
+}
+
+@media(min-width: 768px) {
+	 table tbody td {
+		line-height: inherit
+	}
+}
+
+ table td {
+	border: 0;
+	vertical-align: top
+}
+
+@media(max-width: 767px) {
+	 table td {
+		display: block;
+		font-size: 17px;
+		width: 100% !important
+	}
+}
+
+@media(min-width: 768px) {
+	 table td {
+		padding-top: 24px;
+		padding-bottom: 24px;
+		padding-left: 0;
+		padding-right: 0;
+		display: table-cell;
+		width: auto
+	}
+}
+
+@media(max-width: 767px) {
+	 table td+td {
+		border-top: 1px solid var(--c-card-border-light);
+		margin-top: 18px;
+		padding-top: 18px
+	}
+}
+
+ table td[data-th]::before {
+	color: var(--c-card-text-muted);
+	content: attr(data-th) ": ";
+	display: inline;
+	font-weight: 500
+}
+
+@media(min-width: 768px) {
+	 table td[data-th]::before {
+		display: none
+	}
+}
+
+ table tbody a {
+	box-shadow: inset 0 -1px var(--c-card-border);
+	color: var(--c-card-text-link);
+	cursor: pointer;
+	transition: box-shadow .2s cubic-bezier(0.645, 0.045, 0.355, 1), color .2s cubic-bezier(0.645, 0.045, 0.355, 1)
+}
+
+ table tbody a:hover,
+ table tbody a:focus {
+	box-shadow: inset 0 -1px var(--c-card-border-light);
+	color: var(--c-card-text)
+}
+
+@media(max-width: 767px) {
+	 table tbody {
+		border: 1px solid var(--c-card-border-light);
+		border-width: 3px 1px 1px
+	}
+}
+
+ hr {
+	margin-top: 24px;
+	margin-bottom: 24px;
+	height: 1px;
+	width: 100%;
+	background-color: var(--c-border);
+	border: 0;
+	display: block;
+	padding: 0
+}
+
+@media(min-width: 600px) {
+	 hr {
+		margin-top: 36px
+	}
+}
+
+@media(min-width: 1070px) {
+	 hr {
+		margin-top: 60px
+	}
+}
+
+@media(min-width: 600px) {
+	 hr {
+		margin-bottom: 36px
+	}
+}
+
+@media(min-width: 1070px) {
+	 hr {
+		margin-bottom: 60px
+	}
+}
+
+ figcaption {
+	font-family: Academica;
+	font-size: 13px;
+	line-height: 1.4;
+	font-weight: 300;
+	margin-top: 8px
+}
+
+ figcaption b,
+ figcaption strong {
+	font-weight: 700
+}
+
+ figcaption i,
+ figcaption em {
+	font-style: italic
+}
+
+ figcaption code {
+	font-size: inherit
+}
+
 
 
 /* Figures, Images, Code, Blockquotes, Tables */
@@ -598,19 +1066,6 @@ img {
 }
 
 
-code {
-    font-family: Consolas, 'Courier New', Courier, monospace;
-    font-family: Consolas, 'Courier New', Courier, monospace;
-    display: inline-block;
-    overflow: auto !important;
-    white-space: pre-line !important;
-    word-wrap: break-word !important;
-    padding: 2px 2px  2px 2px;
-    vertical-align:middle;
-    padding: 2px 2px 2px 2px;
-    border: 1px solid var(--secondary-border-color);
-    border-radius: 4px;
-}
 
 .regular-sans code {
     padding: 20px;
@@ -629,94 +1084,13 @@ code {
 }
 
 
-pre code {
-    font-family: Consolas, 'Courier New', Courier, monospace;
-    display: inline-block;
-    overflow: auto !important;
-    white-space: pre-line !important;
-    word-wrap: break-word !important;
-    padding: 15px 15px  15px 15px;
-    vertical-align:middle;
-    width: 90%;
-    background-color: var(--secondary-bg-color);
-    border: 1px solid var(--secondary-border-color);
-    border-radius: 5px;
-    color: var(--primary-text-color);
-}
-
-
-blockquote:before {
-  display: none;
-}
-
-blockquote {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    padding-left: 16px;
-    border-left: 4px solid var(--lime);
-}
-
-
 summary {
   display: flex;
   align-items: center;
   outline: none;
 }
 
-cite {
-    padding-left: 50px;
-    font-style: oblique;
-}
 
-blockquote p {
-    font-family: var(--font-family-serif);
-    font-size: var(--font-size-large);
-    font-style: italic;
-}
-
-table {
-    border-radius: 5px;
-}
-
-th, td {
-    color: var(--primary-text-color);
-    padding: 8px;
-    text-align: left;
-    font-size: 12px;
-}
-
-td {
-   font-size: 14px;
-}
-
-td a {
-    color: inherit;
-    text-decoration: none;
-}
-
-table th {
-    font-weight: 600;
-}
-
-tr {
-    border-radius: 5px;
-}
-
-thead tr:nth-child(odd) {
-    background-color: var(--secondary-bg-color);
-}
-
-tbody tr:nth-child(even) {
-    background-color: var(--secondary-bg-color);
-}
-
-hr {
-    background-color: var(--horizontal-rule-color);
-    color: var(--gray-900);
-    border: 0 none;
-    height: 1px;
-    margin-top: -10px;
-}
 
 /* Blogposts: Post-heading, Post-subheading, Post-content, Related Posts*/
 
