removing ul from body

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -58,18 +58,7 @@
     <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 </head>
 
-<body class="light">
-     <ul class="dropdown">
-        <li class="dropdown-item">
-            <a id="light" href="#">light</a>
-        </li>
-        <li class="dropdown-item">
-            <a id="dark" href="#">dark</a>
-        </li>
-        <li class="dropdown-item">
-            <a id="solar" href="#">solarize</a>
-        </li>
-    </ul>
+<body>
     <div class="container">                    
         <div class = "box">
             {%- include Header.html -%}
